--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,15 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	compile('org.springframework.boot:spring-boot-starter-mustache')
+	compile ('org.springframework.boot:spring-boot-starter-web')
+	compile ('org.projectlombok:lombok')
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("mysql:mysql-connector-java")
+
+	compile ('org.springframework.boot:spring-boot-starter-security')
+	compile ('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
